[gd_scene load_steps=14 format=3 uid="uid://dyxsar10hoa8j"]

[ext_resource type="Script" uid="uid://bjyjr51wqyq2c" path="res://Enemy/ghost(enemy).gd" id="1_awrlq"]
[ext_resource type="Texture2D" uid="uid://bppf5lontwqls" path="res://Enemy/New ghost.png" id="2_awrlq"]
[ext_resource type="Shader" uid="uid://b2qaso3c12ung" path="res://Enemy/hitFlash.tres" id="2_jkqs6"]
[ext_resource type="Script" uid="uid://b2ddws1tbkbvk" path="res://Enemy/ghost.gd" id="2_k2fpk"]
[ext_resource type="Texture2D" uid="uid://bc16ql26onyjt" path="res://texts/healthbarUnder.png" id="4_jkqs6"]
[ext_resource type="Texture2D" uid="uid://begfk64w3uw3h" path="res://texts/healthbarProgress.png" id="5_5ucc7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5ucc7"]
resource_local_to_scene = true
shader = ExtResource("2_jkqs6")
shader_parameter/enebled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_wst2q"]
radius = 14.0
height = 48.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_awrlq"]
radius = 18.0
height = 56.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uvnml"]
shader = ExtResource("2_jkqs6")
shader_parameter/enebled = false
shader_parameter/tint = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_vhdf0"]
resource_name = "flash-anim"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ghost:material:shader_parameter/enebled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_bhi3m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Ghost:material:shader_parameter/enebled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eima4"]
_data = {
&"RESET": SubResource("Animation_bhi3m"),
&"flash-anim": SubResource("Animation_vhdf0")
}

[node name="Ghost(enemy)" type="CharacterBody2D" groups=["EnemyGroup"]]
script = ExtResource("1_awrlq")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="Ghost" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_5ucc7")
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_awrlq")
script = ExtResource("2_k2fpk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(8, -2)
shape = SubResource("CapsuleShape2D_wst2q")

[node name="Navigaion Timer" type="Timer" parent="."]

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(8, -2)
shape = SubResource("CapsuleShape2D_awrlq")
debug_color = Color(0.968627, 0, 0.0235294, 0.419608)

[node name="TextureProgressBar" type="TextureProgressBar" parent="."]
material = SubResource("ShaderMaterial_uvnml")
offset_left = -21.0
offset_top = -39.0
offset_right = 43.0
offset_bottom = 1.0
scale = Vector2(0.8, 0.8)
value = 100.0
texture_under = ExtResource("4_jkqs6")
texture_progress = ExtResource("5_5ucc7")

[node name="Flash_AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_eima4")
}

[connection signal="timeout" from="Navigaion Timer" to="." method="_on_navigaion_timer_timeout"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
